recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: reassignment to val
if(levels = 0){
          ^